--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -1,15 +1,10 @@
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  padding: 0 0.5rem; 
 }
 
 .main {
   padding: 2rem 0;
+  margin: 1rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -35,6 +30,7 @@
   display: inline-block;
   border: none;
   color: #fff;
+  cursor: pointer;
 }
 
 
@@ -47,15 +43,13 @@
 .thead > th {
   border-bottom:1px solid #0070f3;
   padding: 0.4rem;
-  /* margin: 0.6rem; */
 }
 
 .tr{
   margin: 1rem 0rem;
 }
 
-.tbody
- {
+.tbody {
    padding: 0.5rem;
  }
 
@@ -76,18 +70,8 @@
   text-align: center;
 }
 
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.message {
+ margin :0.6rem auto
 }
 
 .grid {
@@ -95,6 +79,7 @@
   align-items: center;
   justify-content: center;
   flex-flow: column nowrap;
+  margin: 3rem 0;
 }
 
 .card {
